refactor: 이미 출석한 경우 안내문만 출력 후 초기화면으로 돌아가도록 수정